# pesticide-sprayer-arm

./: .gitignore  README.md  adjust_blue_box_thresholds.py  standalone_leaf_detection.py
CustomEndEffector/Drawings/: drawings.txt
CustomEndEffector/STL Files/: FullAssembly.stl  SprayMountBox.stl  VacuumPumpMount.stl  stlFiles.txt  stlfiles.txt
arduinoCommunication/server_client/: CMakeLists.txt  package.xml
arduinoCommunication/server_client/src/: leafServer.cpp  sprayPumpClient.cpp  vacuumPumpClient.cpp
arm_manipulation/: CMakeLists.txt  package.xml
arm_manipulation/config/: ompl_planning.yaml
arm_manipulation/launch/: moveit_scene_home_launch.py
arm_manipulation/src/: moveit_go_to_pose_ur.cpp  moveit_scene_home_ur.cpp
arm_msgs/: package.xml
arm_perception/: CMakeLists.txt  package.xml
arm_scripts/: setupFakeur5e.sh
assets/CustomEndEffector/STL Files/: ClosingMount.stl  EndEffectorComponent.stl  ProvidedMount.stl
default_scripts/: README_AUTOMATION.md  camera.sh  configure_robot_network.sh  fix_robot_network.sh  run_automation.sh  set_permanent_ip.sh  setupFakeur5e.sh  setupRealur5e.sh  start_all.sh  start_all_backup.sh  start_all_real.sh
python_scripts/: adjust_blue_box_thresholds.py  adjust_leaf_thresholds.py  check_arduino.py  standalone_leaf_detection.py
src/arduinoCommunication/: CMakeLists.txt  RVIZ_VISUALIZATION.md  package.xml
src/arduinoCommunication/src/: leafServer.cpp  sprayPumpClient.cpp  vacuumPumpClient.cpp
src/arduino_communication/: CMakeLists.txt  RVIZ_VISUALIZATION.md  package.xml
src/arduino_communication/src/: leafServer.cpp  sprayPumpClient.cpp  vacuumPumpClient.cpp
src/arm_manipulation/: CMakeLists.txt  package.xml
src/arm_manipulation/config/: kinematics.yaml  ompl_planning.yaml
src/arm_manipulation/launch/: add_collision_objects_launch.py  move_arm_to_pose_launch.py
src/arm_manipulation/src/: add_collision_objects.cpp  dynamic_obstacle_control.cpp  move_arm_to_pose.cpp  moveit_scene_home_full.cpp
src/arm_monitoring/: package.xml  setup.cfg  setup.py
src/arm_monitoring/arm_monitoring/: arm_position_viewer.py
src/arm_monitoring/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/arm_msgs/: CMakeLists.txt  package.xml
src/arm_msgs/srv/: LeafDetectionSrv.srv
src/detect_leaf_pkg/: STANDALONE_USAGE.md  USAGE_SERVER.md  package.xml  setup.cfg  setup.py
src/detect_leaf_pkg/detect_leaf_pkg/: detection_handler.py  leaf_detection_client.py  leaf_detection_server.py  leaf_visualization_node.py  tf_handler.py
src/detect_leaf_pkg/launch/: leaf_detection_server.launch.py
src/dynamic_obstacles_monitor/: CMakeLists.txt  package.xml
src/dynamic_obstacles_monitor/src/: dynamic_obstacle_control.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: camera_extrinsics.yaml
src/robot_description/launch/: display_robot.launch.py  display_with_camera.launch.py
src/robot_description/meshes/: Draft2.stl  wholedraft1.stl
src/robot_description/rviz/: view_robot.rviz
src/robot_description/urdf/: end_effector.urdf.xacro  end_effector.urdf.xacro.back  ur5e_with_camera.xacro
src/task_automation/: README.md  package.xml  setup.cfg  setup.py
src/task_automation/launch/: automation_task.launch.py
src/task_automation/task_automation/: automation_orchestrator.py
