<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_manipulation</name>
  <version>0.1.0</version>
  <description>UR5e MoveIt scene setup and single move-to-home demo.</description>

  <maintainer email="darshan@todo.todo">darshan</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build-time deps (what the node includes/links) -->
  <build_depend>rclcpp</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>

  <!-- Exported at build (headers, transitive) -->
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>shape_msgs</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>

<depend>tf2</depend>
<depend>tf2_geometry_msgs</depend>
<depend>graph_msgs</depend>


  <!-- Run-time deps (for launching move_group/RViz/xacro + UR description) -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>kdl_kinematics_plugin</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>

  <!-- Tests (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
